[gd_scene load_steps=7 format=3 uid="uid://c0ofnix4bnqex"]

[ext_resource type="Script" path="res://scripts/UI/choose_spell.gd" id="1_a7fe4"]
[ext_resource type="FontFile" uid="uid://ccm1fiedy6brt" path="res://assets/Fonts/LUMOS.TTF" id="1_krj0j"]
[ext_resource type="Script" path="res://scripts/Spells/Spell.gd" id="2_0w0kj"]
[ext_resource type="Resource" uid="uid://cgxxjrc6tywkk" path="res://scripts/Spells/Resources/CobaltBullet.tres" id="3_i1i4e"]
[ext_resource type="Resource" uid="uid://c6kg5upyn0fjl" path="res://scripts/Spells/Resources/lightning_bolt.tres" id="4_cf6qv"]
[ext_resource type="Resource" uid="uid://c0q2bwwvix3om" path="res://scripts/Spells/Resources/maho.tres" id="5_xwx15"]

[node name="ChooseSpell" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a7fe4")
starting_spells = Array[ExtResource("2_0w0kj")]([ExtResource("3_i1i4e"), ExtResource("4_cf6qv"), ExtResource("5_xwx15")])

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.256081, 0.291441, 0.833773, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 267.0
offset_top = 52.0
offset_right = 919.0
offset_bottom = 126.0
theme_override_fonts/font = ExtResource("1_krj0j")
theme_override_font_sizes/font_size = 50
text = "Choose Your Mighty Spell"

[node name="Stats" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 769.0
offset_top = 179.0
offset_right = -235.0
offset_bottom = -239.0

[node name="Confirmation" type="Button" parent="."]
layout_mode = 0
offset_left = 483.0
offset_top = 348.0
offset_right = 657.0
offset_bottom = 401.0
text = "Confirm"

[node name="Back" type="Button" parent="."]
offset_left = 483.0
offset_top = 420.0
offset_right = 657.0
offset_bottom = 473.0
text = "Back"

[node name="SpellList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 525.0
offset_top = 236.0
offset_right = -542.0
offset_bottom = -328.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Confirmation" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
